--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.10.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/postcss": "4.1.10",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -24,12 +24,13 @@
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "4.1.10",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
   },
@@ -59,7 +60,7 @@
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
+    "prisma": "^6.10.0",
     "typescript": "^5"
   }
 }
